# RWSOS_Calibration

./: .gitignore  Dockerfile  Open_PixiEnv_in_VSCode.bat  env.json  json_env.py  pixi.toml  pixi_old - Copy.toml  pyproject.toml  readme.md  rwsos_calib_environment.yml  tree.bat
meuse/: .gitignore  1_Snakefile_databuilder  2_Not-RandomSnakefile.smk  2_RandomSnakefile  2_RandomSnakefile.smk  2_Snakefile  2_Snakefile.smk  2_Snakefilenonslurm.smk  AUTHORS.md  Snakefile  Snakefile_calib.py  calibrate_the_meuse.sh  make_dag.bat  make_dry_run_calib.bat  make_rulegraph.bat  scratch.py  snakefile
meuse/UNREAL_TEST_DATA/: create_set_params.pkl
meuse/config/: MINIMAL_calib_recipe.json  TEST_calib_recipe.json  calib.yml  calib_recipe.json
meuse/scripts/: 01_build_model.py  TEST_calibrate_the_meuse.sh  calibrate_the_meuse.sh  dry_run.bat  gaugemap_and_graph.bat  helper.py  make_rulegraph.bat  make_rulegraph.sh  pixi_run_gaugemap.bat  run_snakemake_c1.sh  run_snakemake_c1_eval_L0.sh  run_snakemake_c4.bat  run_snakemake_c4_L1.sh  run_snakemake_c4_wflow_L5.sh  run_snakemake_valid_wflow_L5.sh  run_valid_wflow_L5.bat  snakemake_c4.bat
meuse/src/: __init__.py  util.py
meuse_random/: .gitignore  02_create_wflow_SIF.bat  1_Snakefile_databuilder.smk  2_Snakefile.smk  2_Snakefile_per_level.smk  2_Snakefile_per_level_spider.smk  3_Snakefile_final_stage  3_Snakefile_final_stage.smk  README.md  how_many_sms.py  pixi_container.sh
meuse_random/config/: LHS_calib_recipe.json  calib.yml  calib_recipe.json  calib_spider.yml
meuse_random/scripts/: calib.sh  calibrate_the_meuse.sh  calibrate_the_meuse_L0.sh  gaugemap_and_graph.bat  spider_calibrate_the_meuse_ALL.sh  spider_calibrate_the_meuse_L0.sh  spider_calibrate_the_meuse_Lx.sh  spider_run_databuilder.sh
meuse_random/spider/: config.yaml
meuse_random/src/: time.py
meuse_random_spider/: .gitignore  1_Snakefile_databuilder_spider.smk  2_Snakefile_per_level_spider_copy.smk  3_Snakefile_final_stage.smk  AUTHORS.md  LICENSE  calib_spider.yml  catalog.yml  dry_run_final_stage.bat  run_final_dry.bat  run_snakemake_final_stage.bat  wflow_sbm_bind.toml
meuse_random_spider/config/: calib.yml
meuse_random_spider/scripts/: calibrate_the_meuse.sh  (+4 more)
rhine/: .gitignore  1_Snakefile_databuilder_spider.smk  2_Snakefile_per_level.smk  2_Snakefile_per_level_spider.smk  level.created
snakemake_cluster/: Snakefile-L-v3_newDates  h7_snake_Ld.sh
vanHessel/: Snakefile_cluster.bak  submit_snake_1000_test.sh
(+2279 files in other folders)
